fix function for corner cases

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <input type="date" id="userdate" />
         <button onclick="calculateDaysUntil()">Посчитать</button>
       </div>
-      <div class="resultLine">
-        До вашего дня рождения <span id="result">осталось...</span>
-      </div>
+      <div class="resultLine">До вашего дня рождения осталось...</div>
     </main>
     <script src="./main.js"></script>
   </body>
